@@ -232,6 +232,8 @@ Bug fixes:
   (Leo White, Gabriel Scherer)
 - PR#6849: Inverted pattern unification error
 - PR#6862: Exhaustiveness check wrong for class constructor arguments
+- PR#6872: Type-directed propagation fails to disambiguate variants
+           that are also exception constructors    
 - GPR#143: fix getsockopt behaviour for boolean socket options
   (Anil Madhavapeddy and Andrew Ray)
 - ocamlbuild on cygwin cannot find ocamlfind
